--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng2-materialize": "^1.8.0-beta.0",
     "ngx-img-cropper": "^0.10.2",
     "rxjs": "^5.5.6",
+    "table-ng-quick": "^1.1.5",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
